# FennelSolochain2

./: .gitignore  Cargo.toml  Dockerfile  LICENSE
.github/workflows/: publish.yml
node/: Cargo.toml  validator-setup-guide.md
node/src/: chain_spec.rs
pallets/fennel/certificate/: Cargo.toml
pallets/fennel/certificate/src/: lib.rs
pallets/fennel/identity/: Cargo.toml
pallets/fennel/identity/src/: lib.rs
pallets/fennel/infostratus/: Cargo.toml
pallets/fennel/infostratus/src/: lib.rs  mock.rs
pallets/fennel/keystore/: Cargo.toml
pallets/fennel/keystore/src/: lib.rs
pallets/fennel/signal/: Cargo.toml
pallets/fennel/signal/src/: lib.rs  mock.rs
pallets/fennel/trust/: Cargo.toml
pallets/fennel/trust/src/: lib.rs
pallets/validator-manager/: Cargo.toml
pallets/validator-manager/src/: lib.rs  mock.rs  tests.rs  weights.rs
runtime/: Cargo.toml
runtime/fennel/: Cargo.toml
runtime/fennel/src/: lib.rs
runtime/src/: genesis_config_presets.rs  lib.rs
runtime/src/configs/: certificate.rs  identity.rs  infostratus.rs  keystore.rs  mod.rs  session.rs  signal.rs  trust.rs
trace/chains/dev/db/full/: IDENTITY  LOG
trace/chains/dev/network/: secret_ed25519
