[package]
name = "pallet-identity"
description = "FRAME pallet providing specialized identity functionality."
version = "0.1.0"
license = "Unlicense"
authors = ['Fennel Labs <https://github.com/fennelLabs>']
edition = "2021"
publish = false

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { version = "3.6.12", default-features = false, package = "parity-scale-codec" }
scale-info = { version = "2.11.1", default-features = false, features = ["derive"] }
frame-benchmarking = { version = "39.0.0", default-features = false, optional = true }
frame-support = { version = "39.0.0", default-features = false }
frame-system = { version = "39.1.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
sp-runtime = { version = "40.1.0", default-features = false }

[dev-dependencies]
sp-core = { version = "35.0.0", default-features = false }
sp-io = { version = "39.0.0", default-features = false }

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking', 'frame-support/runtime-benchmarks', 'frame-system/runtime-benchmarks']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
    'scale-info/std',
    'sp-std/std',
    'sp-runtime/std',
]
try-runtime = ['frame-support/try-runtime', 'frame-system/try-runtime']
